# Nexsys-Vscode

./: CHANGELOG.md  README.md  extension.js  language-configuration.json  package.json  vsc-extension-quickstart.md
nexsys-live-solver/: Cargo.toml  LICENSE_MIT
nexsys-live-solver/pkg/: nexsys_live_solver.d.ts  nexsys_live_solver.js  nexsys_live_solver_bg.wasm  nexsys_live_solver_bg.wasm.d.ts  package.json
nexsys-solver-ext/: Cargo.toml  build.sh
nexsys-solver-ext/src/: lib.rs
syntaxes/: inline-nxs-injection.json  nexsys.tmLanguage.json
