[package]
name = "nexsys-solver-ext"
version = "0.1.0"
authors = ["Grant Christiansen <christiansengrant18@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"

[dependencies.nexsys]
path = "../../nexsys-rs"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
